# reader-libraries

./: .gitignore  README-BBEditPreviewTemp.md.html  README.md  pyproject.toml
etc/: personas.txt  template.xml  xml2html.xsl
reader_libraries/: __init__.py
reader_libraries/etc/: cached-carrel.txt  cached-cites.txt  cached-length.txt  cached-persona.txt  cached-query.txt  cached-question.txt  cached-results.csv  cached-results.txt  catalog.csv  lengths.txt  system-prompt.txt
reader_libraries/static/carrels/ariadne/: index.json  sentences.db
reader_libraries/static/carrels/ariadne/cache/: aayeshah-book_1607-2012.html  adie-realising_1683-2014.html  aharony-web_1312-2008.html  ainsley-view_65-1996.html  aird-ecommerce_689-2001.html  alexander-adaptive_654-2000.html  alexander-webwatch_944-2004.html  allen-internet_1461-2009.html  allen-putting_1131-2005.html  allinson-a_1233-2007.html  allinson-dc_1217-2006.html  allinson-the_1182-2006.html  alsop-deliberations_199-1997.html  alston-minotaur_427-1998.html  anagnostelis-midrib_283-1997.html  ananiadou-the_1293-2007.html  anderson-unicode_917-2003.html  andrew-gold_1627-2012.html  andrew-trends_918-2003.html  apps-dc_1295-2007.html  (+1715 more)
reader_libraries/static/carrels/code4lib/: index.json  sentences.db
reader_libraries/static/carrels/dlib/: index.json
reader_libraries/static/carrels/ital/: index.json  sentences.db
reader_libraries/templates/: base.htm  carrel-form.htm  carrel.htm  cites.htm  home.htm  question.htm  search-form.htm  search.htm
rrag/: __init__.py  rrag.py
rrag/cache/: cached-results.csv
(+1367 files in other folders)
