[project]
name = "reader_libraries"
version = "1.0.0"
description = "An index to 3,000 scholarly journal articles on the topic of digital libraries"
dependencies = [
	"flask",
	"numpy",
	"ollama",
	"pandas",
	"pathlib",
	"scipy",
	"scikit-learn",
	"sqlite_vec",
	"typing"
]

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"
